--- a/courses/A1.md
+++ b/courses/A1.md
@@ -3,7 +3,10 @@
 <details>
   <summary>1. Introduction </summary>
 
-# Introduction
+# Java JDK
+
+![](https://github.com/omeatai/Java-Tutorial/assets/32337103/0070d7bd-d82d-4db0-87ae-2dfda7b31eda)
+
 
 ```java
 
