--- a/courses/A1.md
+++ b/courses/A1.md
@@ -9,7 +9,15 @@
 
 # Download Java JDK
 
+https://www.oracle.com/ng/java/technologies/downloads/#jdk20-mac
+
 ![](https://github.com/omeatai/Java-Tutorial/assets/32337103/4459fb0f-8e8f-4e8e-a39b-acbb5baa0ea2)
+
+# Download Eclipse
+
+https://www.eclipse.org/downloads/
+
+<img width="1211" alt="image" src="https://github.com/omeatai/Java-Tutorial/assets/32337103/5924db15-3181-4fbd-b4b1-637c82faca7e">
 
 ```java
 
